移除futu相关的内容

--- a/example/shareByJs.html
+++ b/example/shareByJs.html
@@ -11,7 +11,6 @@
     <body>
         <p>测试QQ分享，通过js设置</p>
         <button id='hide'>隐藏右上角菜单</button>
-        <a href="https://cloudmain.futunn.com/test/business-qq/example/shareByJs.html">在线demo</a>
     </body>
     <script type="text/javascript" src="../dist/index.es5.js"></script>
     <script type="text/javascript">
@@ -21,7 +20,7 @@
             desc:   '测试desc-byjs-201705-10',
 
             // 图片最小需要200 * 200，否则分享到Qzone时会被Qzone过滤掉。
-            imgUrl: 'https://webopsstaticresource-10000538.file.myqcloud.com/nnuniversity/images/university/top.jpg',
+            imgUrl: 'https://localhost.com/nnuniversity/images/university/top.jpg',
 
             // url必须跟页面url同一个域名，否则设置不生效。
             link:   window.location.href
