--- a/example/shareByJs.html
+++ b/example/shareByJs.html
@@ -20,7 +20,7 @@
             desc:   '测试desc-byjs-201705-10',
 
             // 图片最小需要200 * 200，否则分享到Qzone时会被Qzone过滤掉。
-            imgUrl: 'https://localhost.com/nnuniversity/images/university/top.jpg',
+            imgUrl: 'https://i2.chinanews.com/simg/cmshd/2020/04/21/5ed35cfb8e684a498fe63b8b52f79503.jpg',
 
             // url必须跟页面url同一个域名，否则设置不生效。
             link:   window.location.href
