--- a/example/shareByMeta.html
+++ b/example/shareByMeta.html
@@ -9,7 +9,7 @@
 
         <!--通过meta标签进行QQ分享配置-->
         <meta itemprop="name" content="这是分享的标题"/>
-        <meta itemprop="image" content="https://webopsstaticresource-10000538.file.myqcloud.com/nnuniversity/images/university/top.jpg" />
+        <meta itemprop="image" content="https://i2.chinanews.com/simg/cmshd/2020/04/21/5ed35cfb8e684a498fe63b8b52f79503.jpg" />
         <meta name="description" itemprop="description" content="这是要分享的内容" />
 
         <title>测试QQ分享</title>
